Attempt to fix background display on mobile.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,27 @@
+html {
+  height:100%;
+  width:100%;
+}
+
+.body {
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background-image: url("../img/bg.jpg");
+  background-size: cover;       
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+}
+
 button:focus {
   outline: 0;
 }
@@ -36,21 +60,6 @@ button:focus {
 
 .fab {
   pointer-events: auto;
-}
-
-.body {
-  display: flex;
-  flex-direction: column;
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  height: 10000px;
-  overflow: hidden;
-  background-image: url("../img/bg.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-attachment: fixed;
 }
     
 .content {
